<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:isScrollContainer="true"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleAuthorization"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:layout_margin="@dimen/common_padding_default"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            app:helperText="@string/helper_required"
            android:layout_margin="@dimen/common_padding_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCommerceCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_commerceCode"
            app:helperText="@string/helper_required"
            android:layout_margin="@dimen/common_padding_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCommerceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTerminalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_terminalCode"
            app:helperText="@string/helper_required"
            android:layout_margin="@dimen/common_padding_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTerminalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            app:helperText="@string/helper_required"
            android:layout_margin="@dimen/common_padding_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card"
            app:helperText="@string/helper_required"
            android:layout_margin="@dimen/common_padding_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="SEND"
            android:background="@color/blue"
            android:textColor="@color/white"
            />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>